# activewatcher

./: .gitignore  README.md  pyproject.toml
activewatcher/: __main__.py
activewatcher/cli/: main.py
activewatcher/common/: categories.py  config.py  http.py  models.py  time.py
activewatcher/config/: categories.example.json  watcher.example.toml
activewatcher/server/: app.py  db.py  ingest.py  reports.py  ui.html  ui.py
activewatcher/watchers/: battery.py  hyprland.py  idle.py  system.py
extensions/browser-tabs/: background.js  manifest.json  options.html  options.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: install_user_integration.sh  run_backend_server.sh  start_activewatcher.sh  start_backend_frontend.sh
