[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activewatcher"
version = "0.1.0"
description = "Local activity tracker (Hyprland + idle) with SQLite summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
activewatcher = "activewatcher.cli.main:app"

[tool.setuptools.packages.find]
include = ["activewatcher*"]

[tool.setuptools.package-data]
"activewatcher.server" = ["ui.html"]
